@@ -1,0 +1,5 @@
+[postfix-sasl]
+enabled     = true
+filter      = postfix-sasl
+action      = PH_FAIL2BAN_ACTION[name=postfix, port="PH_FAIL2BAN_DISABLED_SERVICES", protocol=tcp]
+logpath     = PH_MAILLOG
