@@ -1,0 +1,5 @@
+[sshd-ddos]
+enabled     = true
+filter      = sshd-ddos
+action      = PH_FAIL2BAN_ACTION[name=sshd-ddos, port="PH_SSHD_PORT", protocol=tcp]
+logpath     = PH_SSHD_LOGFILE
