@@ -1,0 +1,5 @@
+[sshd]
+enabled     = true
+filter      = sshd
+action      = PH_FAIL2BAN_ACTION[name=sshd, port="PH_SSHD_PORT", protocol=tcp]
+logpath     = PH_SSHD_LOGFILE
